# webvision

./: README.md  custom-resnet.ipynb  pyproject.toml
backend/: Cargo.toml  wrangler.toml
backend/src/: lib.rs
ui/: capacitor.config.ts  package-lock.json  package.json
ui/src/app/: layout.tsx  page.tsx
ui/src/services/: model.ts
